Details
Description
AlterTable Request Fails when adding TIMESTAMP Column with Default Value. It crashes Kudu server requiring a restart.
Adding a Nullable Timestamp column (without a default value) works fine.
Quick way to reproduce -
In kudu/java/kudu-client/src/test/java/org/kududb/client/TestKuduTable.java
testAlterTable() lines ~76 - 80
Add a col with Timestamp and default value
ato = new AlterTableOptions()
.addColumn("testaddmulticolnotnull", Type.INT32, 4)
.addNullableColumn("testaddmulticolnull", Type.STRING)
//.addNullableColumn("testaddmulticolTimestampcol", Type.TIMESTAMP);
.addColumn("testaddmulticolTimestampcol", Type.TIMESTAMP, (System.currentTimeMillis() * 1000));
submitAlterAndCheck(ato, tableName);