KUDU-1522 Fix AlterTable Timestamp col with default value

Change-Id: I7d0b8c79213330f92f6f85e7ed74aa271d8fda92
Reviewed-on: http://gerrit.cloudera.org:8080/3980
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>